# mpl-bubblegum

./: .gitignore  .gitmodules  .verified-build.json  CONTRIBUTING.md  PROJECT_README.md  README.md  init.sh  package.json  pnpm-lock.yaml
.github/: .env  file-filters.yml  test.txt
.github/workflows/: build-programs.yml  build-rust-client.yml  create-release.yml  create-solana-release.yml  create-svm-release.yml  deploy-js-client.yml  deploy-js.yml  deploy-program.yml  deploy-rust-client.yml  main.yml  test-commit.yml  test-js-client.yml  test-programs.yml  test-rust-client.yml  verify-program.yml
clients/js/: .eslintrc.js  .gitignore  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
clients/js-solita/: .prettierrc.js  .solitarc.js  README.md  package.json  pnpm-lock.yaml
clients/js-solita/tests/: main.test.ts
clients/js/src/: canTransfer.ts  createTree.ts  decorator.ts  errors.ts  flags.ts  getAssetWithProof.ts  getCompressionPrograms.ts  getCompressionProgramsForV1Ixs.ts  hash.ts  index.ts  leafAssetId.ts  merkle.ts  mintV2.ts  plugin.ts  readApiDecorator.ts  readApiTypes.ts
clients/js/src/hooked/: changeLog.ts  concurrentMerkleTree.ts  index.ts  merkleTreeAccountData.ts  mintAuthority.ts  mintAuthorityPda.ts  path.ts  resolvers.ts
clients/js/test/: _setup.ts  burn.test.ts  burnV2.test.ts  cancelRedeem.test.ts  closeTree.test.ts  closeTreeV2.test.ts  collectV2.test.ts  create.test.ts  createTree.test.ts  createTreeV2.test.ts  dasApi.test.ts  decompressV1.test.ts  decompressV2.test.ts  delegate.test.ts  delegateAndFreezeV2.test.ts  delegateV2.test.ts  freezeV2.test.ts  getProgram.test.ts  mintToCollectionV1.test.ts  mintToCollectionV1AndTransfer.test.ts  mintV1.test.ts  mintV2ToCollectionAndTransfer.test.ts  mintV2_only.test.ts  parseMintV1.test.ts  parseMintV2.test.ts  permanentBurnDelegate.test.ts  permanentFreezeDelegate.test.ts  permanentTransferDelegate.test.ts  readApi.test.ts  redeem.test.ts  royalties.test.ts  setAndVerifyCollection.test.ts  setCollectionV2.test.ts  setNonTransferableV2.test.ts  setTreeDelegate.test.ts  thawAndRevokeV2.test.ts  thawV2.test.ts  transfer.test.ts  transferV2.test.ts  unverifyCollection.test.ts  (+11 more)
clients/mpl-ac-js/: .env.example  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
clients/mpl-ac-js/src/: index.ts  plugin.ts
clients/mpl-ac-js/src/hooked/: concurrentMerkleTree.ts
clients/mpl-ac-js/test/: _setup.ts  getProgram.test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: hash.rs  lib.rs  traits.rs  utils.rs
clients/rust/tests/: burn.rs  mint.rs  transfer.rs
clients/rust/tests/setup/: mod.rs  tree_manager.rs
clients/spl-ac-js/: CONTRIBUTING.md  README.md  package.json
clients/spl-ac-js/src/: plugin.ts
clients/spl-ac-js/src/hooked/: index.ts  merkleTreeAccountData.ts  path.ts
clients/spl-ac-js/test/: _setup.ts  getProgram.test.ts
configs/: kinobi.cjs  mpl-ac-kinobi.cjs  shank.cjs  spl-ac-kinobi.cjs  validator.cjs  validator.mainnet.cjs
configs/program-scripts/: build.sh  clean.sh  dump.sh  test.sh
configs/scripts/program/: build.sh  dump.sh  dump_devnet.sh  temp_prep_commands.sh  test-verified-program-config.sh  test.sh  verify-from-repo.sh
configs/scripts/program/squads-verified-upgrade/: Cargo.toml
configs/scripts/program/squads-verified-upgrade/src/: main.rs
idls/: bubblegum.json  mpl_account_compression.json  mpl_bubblegum.json  mpl_noop.json  mpl_project_name.json  protractor.json  spl_account_compression.json
programs/bubblegum/: Anchor.toml  Cargo.toml  README.md
programs/bubblegum/program/: Cargo.toml
programs/bubblegum/program/src/: asserts.rs  error.rs  lib.rs  traits.rs  utils.rs
programs/bubblegum/program/src/processor/: add_canopy.rs  burn.rs  cancel_redeem.rs  close_tree.rs  collect.rs  compress.rs  create_tree.rs  create_tree_with_root.rs  decompress.rs  delegate.rs  delegate_and_freeze.rs  finalize_tree_with_root.rs  finalize_tree_with_root_and_collection.rs  freeze.rs  mint.rs  mint_edge.rs  mint_node.rs  mint_to_collection.rs  mod.rs  prepare_tree.rs  redeem.rs  set_and_verify_collection.rs  set_collection.rs  set_decompressable_state.rs  set_decompressible_state.rs  set_non_transferable.rs  set_tree_delegate.rs  thaw.rs  thaw_and_revoke.rs  transfer.rs  unverify_collection.rs  unverify_creator.rs  update_asset_data.rs  update_metadata.rs  update_tree_config.rs  verify_collection.rs  verify_creator.rs
programs/bubblegum/program/src/state/: collect.rs  leaf_schema.rs  metaplex_adapter.rs  metaplex_anchor.rs  mod.rs
programs/bubblegum/program/tests/: batch-mint.rs  collection.rs  creators.rs  decompression.rs  rollup.rs  simple.rs
programs/bubblegum/program/tests/test_data/: mod.rs  rollup_tree.rs
programs/bubblegum/program/tests/utils/: context.rs  digital_asset.rs  mod.rs  tree.rs  tx_builder.rs
programs/mpl-bubblegum/: Cargo.toml
programs/mpl-bubblegum/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
programs/mpl-bubblegum/tests/: create.rs
programs/mpl-project-name/: Cargo.toml  README.md
programs/mpl-project-name/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
programs/mpl-project-name/tests/: create.rs
programs/primitives-protocol/program/: Cargo.toml
programs/primitives-protocol/program/src/: asserts.rs  lib.rs
programs/primitives-protocol/program/src/processor/: burn.rs  delegate.rs  mint_edge.rs  mint_node.rs  mod.rs  set_and_verify_collection.rs  update_metadata.rs  verify_creator.rs
programs/primitives-protocol/program/src/state/: leaf_schema.rs  metaplex_adapter.rs  mod.rs
programs/primitives-protocol/program/tests/: collection.rs  creators.rs  simple.rs
programs/primitives-protocol/program/tests/utils/: mod.rs  tree.rs  tx_builder.rs
programs/protractor/: keypair.json  program-id.json
programs/protractor/program/: Cargo.toml
programs/protractor/program/src/: lib.rs
programs/protractor/program/src/processor/: burn.rs  mod.rs  update_metadata.rs
programs/protractor/program/src/state/: leaf_schema.rs
(+1 files in other folders)
