[package]
name = "mpl-bubblegum"
version = "1.4.0"
description = "Metaplex Bubblegum SDK"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/mpl-bubblegum"
license-file = "../../LICENSE"
edition = "2021"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
test-sbf = []
serde = ["dep:serde", "dep:serde_with", "kaigan/serde"]

[dependencies]
borsh = ">= 0.9, < 1.0"
kaigan = ">= 0.1"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = ">= 1.14"
thiserror = "^1.0"

[dev-dependencies]
assert_matches = "1.5.0"
bytemuck = "1.14.0"
solana-program-test = "2.0.25"
solana-sdk = "2.0.25"
spl-account-compression = { version = "1.0.0", features = ["no-entrypoint", "cpi"]}
spl-associated-token-account = { version = "5.0.1", features = ["no-entrypoint"] }
spl-merkle-tree-reference = { version = "1.0.0" }
spl-noop = { version = "1.0.0", features = ["no-entrypoint"] }
spl-token = { version = "5.0.2", features = ["no-entrypoint"] }
