[package]
name = "mpl-bubblegum"
version = "2.1.1"
description = "Metaplex Bubblegum SDK"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/mpl-bubblegum"
license-file = "../../LICENSE"
edition = "2021"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
anchor = ["dep:anchor-lang"]
test-sbf = []
serde = ["dep:serde", "dep:serde_with", "kaigan/serde"]

[dependencies]
anchor-lang = { version = "1.0.0", optional = true }
borsh = { version = "1.0", features = ["derive"] }
kaigan = ">= 0.1"
modular-bitfield = "^0.11.2"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "=3.14.0", optional = true }
solana-program = "3.0.0"
solana-program-error = "3.0.0"
thiserror = "^1.0"

[dev-dependencies]
assert_matches = "1.5.0"
bytemuck = "1.14.0"
mpl-account-compression = { version = "2.0.0", features = ["no-entrypoint", "cpi"]}
mpl-core = "0.12.0"
mpl-noop = { version = "2.0.0", features = ["no-entrypoint"] }
solana-program-test = "3.0.0"
solana-sdk = "3.0.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
spl-associated-token-account = { version = "8.0.0", features = ["no-entrypoint"] }
spl-merkle-tree-reference = { version = "1.0.0" }
spl-token = { version = "9.0.0", features = ["no-entrypoint"] }