[package]
name = "mpl-project-name"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[dependencies]
solana-program = "=1.14.13"
shank = "0.0.12"
borsh = "0.9.3"
thiserror = "~1.0"
num-derive = "0.3.3"
num-traits = "~0.2"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "=1.14.13"
solana-sdk = "=1.14.13"

[lib]
crate-type = ["cdylib", "lib"]
