[package]
name = "bubblegum"
version = "0.12.0"
description = "NFT Compression"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/mpl-bubblegum"
license-file = "../../../LICENSE"
edition = "2021"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-sbf = []
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
bytemuck = "1.13.0"
mpl-account-compression = { version = "0.4.2", features = ["cpi"] }
mpl-noop = { version = "0.2.1", features = ["no-entrypoint"] }
mpl-token-metadata = "4.1.2"
num-traits = "0.2.15"
solana-program = "~1.18.15"
spl-account-compression = { version = "0.4.2", features = ["cpi"] }
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
spl-concurrent-merkle-tree = { version = "0.4.1" }
spl-noop = { version = "0.2.0", features = ["no-entrypoint"] }
spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }

[dev-dependencies]
async-trait = "0.1.71"
mpl-token-auth-rules = { version = "1.5.1", features = ["no-entrypoint"] }
solana-program-test = "~1.18.15"
solana-sdk = "~1.18.15"
spl-merkle-tree-reference = "0.1.1"
