[package]
name = "primitives-protocol"
version = "0.0.1"
description = "Social Graph Compression"
authors = ["Nicholas Oxford <n@primitives.xyz>"]
repository = "https://github.com/metaplex-foundation/mpl-bubblegum"
license-file = "../../../LICENSE"
edition = "2021"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-sbf = []
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
bytemuck = "1.13.0"
mpl-token-metadata = "3.2.3"
num-traits = "0.2.15"
solana-program = "=1.18.2"
spl-account-compression = { version="0.3.0", features = ["cpi"] }
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }

[dev-dependencies]
async-trait = "0.1.71"
solana-program-test = "=1.18.2"
solana-sdk = "=1.18.2"
spl-concurrent-merkle-tree = "0.2.0"
spl-merkle-tree-reference = "0.1.0"
spl-noop = { version = "0.1.3", features = ["no-entrypoint"] }
